tests/baselines/reference/assignmentCompatWithObjectMembers5.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts(13,1): error TS2323: Type 'I' is not assignable to type 'C'.
  Property 'foo' is missing in type 'I'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts(14,1): error TS2323: Type 'C' is not assignable to type 'I'.
  Property 'fooo' is missing in type 'C'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts (2 errors) ====
    class C {
        foo: string;
    }
    
    var c: C;
    
    interface I {
        fooo: string;
    }
    
    var i: I;
    
    c = i; // error
    ~
!!! error TS2323: Type 'I' is not assignable to type 'C'.
!!! error TS2323:   Property 'foo' is missing in type 'I'.
    i = c; // error
    ~
!!! error TS2323: Type 'C' is not assignable to type 'I'.
!!! error TS2323:   Property 'fooo' is missing in type 'C'.